fix header gap

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ button, select {
 
 #header {
     display: flex;
+    gap: 2rem;
     align-items: center;
     justify-content: center;
     width: 100%;
